Finish Recipe Listing Functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">BakingApp</string>
+    <string name="different_ingredients">Different Ingredients</string>
+    <string name="different_steps">Different Steps</string>
+    <string name="share">Share</string>
+    <string name="view_recipe">View Recipe</string>
 </resources>
