--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="back">back</string>
     <string name="steps">Steps</string>
     <string name="share_recipe">Share Recipe</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="servings">Servings</string>
+    <string name="err_load_recipe_no_internet">Not able to load recipes, check your internet connection.</string>
 </resources>
