--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="add_widget">Add widget</string>
     <string name="servings">Servings</string>
     <string name="err_load_recipe_no_internet">Not able to load recipes, check your internet connection.</string>
+    <string name="open">Open</string>
 </resources>
